--- a/ecommerce-product-website/src/styles/abstracts/_variables.scss
+++ b/ecommerce-product-website/src/styles/abstracts/_variables.scss
@@ -8,7 +8,6 @@ $min-width: 370px;
 
 $nav-index: 1;
 
-//naming devices
-$large: 1440px;
-$medium: 1200px;
-$small: 768px;
+$desktop: 1440px;
+$tablet: 1200px;
+$mobile: 768px;
