--- a/ecommerce-product-website/src/styles/components/_button.scss
+++ b/ecommerce-product-website/src/styles/components/_button.scss
@@ -16,7 +16,7 @@
   border: none;
   cursor: pointer;
 
-  @include mixin.mediaQuery(var.$medium) {
+  @include mixin.mediaQuery(var.$tablet) {
     width: 150px;
     padding: 0;
   }
@@ -30,7 +30,7 @@
     margin-left: 35px;
     margin-bottom: 11px;
 
-    @include mixin.mediaQuery(var.$small) {
+    @include mixin.mediaQuery(var.$mobile) {
       margin-left: 20px;
     }
   }
@@ -45,10 +45,10 @@
     width: 507px;
     height: 41px;
 
-    @include mixin.mediaQuery(var.$medium) {
+    @include mixin.mediaQuery(var.$tablet) {
       width: 500px;
     }
-    @include mixin.mediaQuery(var.$small) {
+    @include mixin.mediaQuery(var.$mobile) {
       width: 300px;
     }
   }
